fix: Align footer and sponsors for 960px+
Project_7

--- a/Project_7/css/style-960.css
+++ b/Project_7/css/style-960.css
@@ -222,7 +222,12 @@
     height: 120px;
     background: #F9F9F9;
     border-top: 2px solid #F1F1F1;
-    padding: 32px 60px 48px;
+}
+
+.sponsors__wrapper {
+    width: 960px;
+    margin: auto;
+    padding: 0 60px;
 }
 
 .sponsors__list {
@@ -233,7 +238,7 @@
 }
 
 .sponsors__list li {
-    margin: 19px 20px 5px;
+    margin: 25px 20px 5px;
 }
 
 .sponsors__sponsor1 {
@@ -305,6 +310,8 @@
 }
 
 .footer__wrapper {
+    width: 960px;
+    margin: auto;
     display: flex;
     justify-content: space-between;;
     padding-top: 45px;
