--- a/Project_7/css/style.css
+++ b/Project_7/css/style.css
@@ -41,5 +41,4 @@ body {
 .footer__wrapper {
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.2);
 }
